--- a/events.html
+++ b/events.html
@@ -11,7 +11,7 @@
 
         <button id="first">click me - 1</button>
         <button id="second">click me - 2</button>
-        <button>click me - 3</button>
+        <button id="last">click me - 3</button>
 
         <script>
             function handleClick() {
@@ -32,6 +32,11 @@
             const firstButton =document.getElementById('first');
             firstButton.addEventListener('click' ,handleClick3);
 
+
+            // anonymous function
+            document.getElementById('last').addEventListener('click',function(){
+                document.body.style.backgroundColor='green';
+            })
 
         </script>
     </body>
